--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
@@ -24,21 +25,21 @@
     </nav>
 
     <!-- hero -->
-
-    <div class="jumbotron">
-        <h1 class="display-4">Trash Points</h1>
-        <p class="lead">The place where you can turn trash into money !</p>
-        <hr class="my-4">
-        <p>Upload a photo or video of you picking up trash to get points to turn into money. </p>
-        <p class="lead">
-            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-        </p>
+    <div id="main">
+        <div class="jumbotron">
+            <h1 class="display-4">Trash Points</h1>
+            <p class="lead">The place where you can turn trash into money !</p>
+            <hr class="my-4">
+            <p>Upload a photo or video of you picking up trash to get points to turn into money. </p>
+            <p class="lead">
+                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            </p>
+        </div>
     </div>
-
 
     <!-- hero 2 -->
 
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron jumbotron-fluid" id="main">
         <div class="container">
             <h1 class="display-4"></h1>
             <p class="lead">These are some examples of what you can submit</p>
