--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 
-<body>
+<body class="main">
     <!-- navbar -->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -25,7 +25,7 @@
     </nav>
 
     <!-- hero -->
-    <div id="main">
+    <div class="main">
         <div class="jumbotron">
             <h1 class="display-4">Trash Points</h1>
             <p class="lead">The place where you can turn trash into money !</p>
