--- a/sign_up.html
+++ b/sign_up.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 
-<body>
+<body class="main">
     <!-- navbar -->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
