--- a/upload.html
+++ b/upload.html
@@ -2,11 +2,12 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 
-<body>
+<body class="main">
     <!-- navbar -->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
