--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <!-- hero -->
     <div class="main">
         <div class="jumbotron">
-            <h1 class="display-4">Trash Points</h1>
-            <p class="lead">The place where you can turn trash into money !</p>
-            <hr class="my-4">
-            <p>Upload a photo or video of you picking up trash to get points to turn into money. </p>
-            <p class="lead">
+            <h1 class="display-4 d-flex justify-content-center">Trash Points</h1>
+            <p class="lead d-flex justify-content-center">The place where you can turn trash into money !</p>
+            <hr class="my-4 d-flex justify-content-center">
+            <p class="d-flex justify-content-center">Upload a photo or video of you picking up trash to get points to turn into money. </p>
+            <p class="lead d-flex justify-content-center">
                 <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
             </p>
         </div>
@@ -42,7 +42,7 @@
     <div class="jumbotron jumbotron-fluid" id="main">
         <div class="container">
             <h1 class="display-4"></h1>
-            <p class="lead">These are some examples of what you can submit</p>
+            <p class="lead d-flex justify-content-center">These are some examples of what you can submit</p>
         </div>
         <div>
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
